--- a/board/views/post.html
+++ b/board/views/post.html
@@ -9,12 +9,12 @@
   <body>
     <h1>发表留言</h1>
     <div>姓名：</div>
-    <input type="text" name="firstname" />
+    <input name="name" type="text" name="firstname" />
     <div>留言内容：</div>
-    <textarea rows="10" cols="100"></textarea>
+    <textarea name="content" rows="10" cols="100"></textarea>
     <div>
-      <button>提交</button>
-      <button onclick="window.location.href='/'">返回首页</button>
+      <button name="commit">提交</button>
+      <button name="back" onclick="window.location.href='/'">返回首页</button>
     </div>
   </body>
 </html>
