--- a/board/views/home.html
+++ b/board/views/home.html
@@ -11,7 +11,7 @@
     <h1 class="title">首页</h1>
     <img src="/public/img/baidu_jgylogo3.gif" alt="baidu" />
     <br />
-    <button class="goPostButton" onclick="window.location.href='/post.html'">
+    <button class="goPostButton" onclick="window.location.href='/post'">
       发表留言
     </button>
     <ul class="commentList">
