--- a/boardByExpress/views/post.html
+++ b/boardByExpress/views/post.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>发表留言</h1>
-    <form action="/add_comment" method="GET">
+    <form action="/post" method="post">
       <label for="name">姓名：</label>
       <br />
       <input
