--- a/curd/views/index.html
+++ b/curd/views/index.html
@@ -1,20 +1,25 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/public/img/favicon.ico">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="/public/img/favicon.ico" />
 
     <title>Express Dashboard</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template -->
-    <link href="/public/css/dashboard.css" rel="stylesheet">
+    <link href="/public/css/dashboard.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -61,7 +66,9 @@
               </li>
             </ul>
 
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+            <h6
+              class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
+            >
               <span>Saved reports</span>
               <a class="d-flex align-items-center text-muted" href="#">
                 <span data-feather="plus-circle"></span>
@@ -97,10 +104,17 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+          <div
+            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
+          >
             <h1 class="h2">Dashboard</h1>
           </div>
-
+          <button
+            class="btn btn-sm btn-outline-secondary"
+            onclick="window.location.href='/students/new'"
+          >
+            增加学生
+          </button>
           <h2>Section title</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
@@ -114,17 +128,15 @@
                 </tr>
               </thead>
               <tbody>
-                  {{each students}}
-                  <tr>
-                      <td>{{$value.id}}</td>
-                      <td>{{$value.name}}</td>
-                      <td>{{$value.gender}}</td>
-                      <td>{{$value.age}}</td>
-                      <td>{{$value.address}}</td>
-                    </tr>
-                  {{/each}}
-                
-                
+                {{each students}}
+                <tr>
+                  <td>{{ $value.id }}</td>
+                  <td>{{ $value.name }}</td>
+                  <td>{{ $value.gender }}</td>
+                  <td>{{ $value.age }}</td>
+                  <td>{{ $value.address }}</td>
+                </tr>
+                {{/each}}
               </tbody>
             </table>
           </div>
