--- a/curd/views/new.html
+++ b/curd/views/new.html
@@ -41,39 +41,65 @@
               </button>
             </div> -->
           </div>
-          <form>
+          <form action="/students/new" method="POST">
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
+              <label for="exampleInputEmail1">姓名</label>
               <input
-                type="email"
+                type="text"
                 class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
-                placeholder="Enter email"
+                placeholder="输入姓名"
+                required
               />
-              <small id="emailHelp" class="form-text text-muted"
-                >We'll never share your email with anyone else.</small
-              >
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
+              <label for="exampleInputEmail1">性别</label>
+              <br />
               <input
-                type="password"
+                type="radio"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="gender"
+                value="1"
+                checked
+              />
+              男
+              <br />
+              <input
+                type="radio"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="gender"
+                value="0"
+              />
+              女
+              <br />
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">年龄</label>
+              <input
+                type="number"
                 class="form-control"
-                id="exampleInputPassword1"
-                placeholder="Password"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                min="0"
+                max="100"
+                required
               />
             </div>
-            <div class="form-check">
+            <div class="form-group">
+              <label for="exampleInputEmail1">地址</label>
               <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
+                type="text"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="输入地址"
+                required
               />
-              <label class="form-check-label" for="exampleCheck1"
-                >Check me out</label
-              >
             </div>
+
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </main>
