--- a/curd/views/edit.html
+++ b/curd/views/edit.html
@@ -29,7 +29,7 @@
           <div
             class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
           >
-            <h1 class="h2">添加 Student</h1>
+            <h1 class="h2">编辑 Student</h1>
             <!-- <div class="btn-toolbar mb-2 mb-md-0">
               <div class="btn-group mr-2">
                 <button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -41,7 +41,8 @@
               </button>
             </div> -->
           </div>
-          <form action="/students/new" method="POST">
+          <form action="/students/edit" method="POST">
+            <input type="hidden" name="id" value="{{ id }}" />
             <div class="form-group">
               <label for="exampleInputEmail1">姓名</label>
               <input
@@ -51,12 +52,14 @@
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
                 placeholder="输入姓名"
+                value="{{ name }}"
                 required
               />
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">性别</label>
               <br />
+              {{ if gender==1 }}
               <input
                 type="radio"
                 id="exampleInputEmail1"
@@ -65,8 +68,20 @@
                 value="1"
                 checked
               />
+
+              {{ else }}
+              <input
+                type="radio"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="gender"
+                value="1"
+              />
+              {{ /if }}
+
               男
               <br />
+              {{ if gender==1 }}
               <input
                 type="radio"
                 id="exampleInputEmail1"
@@ -74,6 +89,17 @@
                 name="gender"
                 value="0"
               />
+              {{ else }}
+              <input
+                type="radio"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="gender"
+                value="0"
+                checked
+              />
+              {{ /if }}
+
               女
               <br />
             </div>
@@ -88,6 +114,7 @@
                 min="0"
                 max="100"
                 required
+                value="{{ age }}"
               />
             </div>
             <div class="form-group">
@@ -100,6 +127,7 @@
                 aria-describedby="emailHelp"
                 placeholder="输入地址"
                 required
+                value="{{ address }}"
               />
             </div>
 
