--- a/curd/views/index.html
+++ b/curd/views/index.html
@@ -125,6 +125,7 @@
                   <th>性别</th>
                   <th>年龄</th>
                   <th>地址</th>
+                  <th>操作</th>
                 </tr>
               </thead>
               <tbody>
@@ -135,6 +136,10 @@
                   <td>{{ $value.gender }}</td>
                   <td>{{ $value.age }}</td>
                   <td>{{ $value.address }}</td>
+                  <td>
+                    <a href="/students/edit?id={{ $value.id }}">编辑</a>
+                    <a href="/students/delete?id={{ $value.id }}">删除</a>
+                  </td>
                 </tr>
                 {{/each}}
               </tbody>
